fixed a z-index bug after leaving planet

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #111111
 }
 #editor {
     position: absolute;
